testdata/baselines/reference/submodule/compiler/extendedUnicodePlaneIdentifiersJSDoc.errors.txt
file.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.


==== file.js (2 errors) ====
    /**
     * Adds
     * @param {number} ğ‘š
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {number} ğ‘€
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function foo(ğ‘š, ğ‘€) {
        console.log(ğ‘€ + ğ‘š);
    }